# PCDC

./: .gitignore  README.md  pyproject.toml
data/: bootstrap_corpus.txt  long_session_prompts.json
docs/: pcdc_synthesis.md  session3_telemetry.json  session3b_telemetry.json  session4_offcorpus_telemetry.json  session_transcript_2026-02-26.md  session_transcript_2026-02-26_session2.md  session_transcript_2026-02-27_session3.md  session_transcript_2026-02-27_session4.md  system_architecture.md
results/: session_20260228_105002.json  session_20260228_transcript.json  validation_probe.json
results/session_20260228_105002_analysis/: session_20260228_105002_summary.md
results/session_20260228_transcript_analysis/: session_20260228_transcript_summary.md
scripts/: analyse_session.py  consolidate_exp6.py  exp6_cognitive_loop.py  gather_telemetry.py  gather_telemetry_offcorpus.py  ghost_mic.py  long_session_test.py  plot_session.py  pretrain_pchead.py  run_continual.py  run_depth_vs_time.py  run_mnist.py
src/pcdc/: __init__.py
src/pcdc/core/: activations.py  clamp.py  energy.py  pc_network.py
src/pcdc/gguf/: baselines.py  datasets.py  gguf_backend.py  pc_head.py
src/pcdc/server/: app.py  memory_client.py  schemas.py  steering.py  telemetry_db.py
src/pcdc/training/: baseline_mlp_backprop.py  continual_runner.py  depth_time_experiment.py  depth_time_plots.py  eval_mnist_pc.py  train_mnist_pc.py
src/pcdc/utils/: config.py  metrics_logger.py
tests/: conftest.py  test_activations.py  test_clamp_modes.py  test_energy.py  test_pc_head.py  test_pc_network.py
