[project]
name = "pcdc"
version = "0.1.0"
description = "Predictive Coding Digital Circuit — stateful dynamical PC network in PyTorch"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
gguf = [
    "llama-cpp-python>=0.2.50",
]
server = [
    "llama-cpp-python>=0.2.50",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sse-starlette>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pcdc"]

[project.scripts]
pcdc-mnist = "pcdc.training.train_mnist_pc:main"
pcdc-continual = "pcdc.training.continual_runner:main"
pcdc-depth-time = "pcdc.training.depth_time_experiment:main_cli"
pcdc-serve = "pcdc.server.app:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
